// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nsisWine > custom include — build 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsisWine > menuCategory — build + install 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "Test Menu Category CustomName 1.1.0.exe",
      "safeArtifactName": "Test-Menu-Category-CustomName-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Menu Category CustomName 1.1.0.exe.blockmap",
      "safeArtifactName": "Test-Menu-Category-CustomName-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsisWine > multi-language license — build 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsisWine > perMachine oneClick — build + install 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "isAdminRightsRequired": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "isAdminRightsRequired": true,
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "isAdminRightsRequired": true,
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp Setup 1.1.0.exe",
          },
        ],
        "releaseDate": "@releaseDate",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`nsisWine > perMachine oneClick — build + install 2`] = `
{
  "provider": "generic",
  "updaterCacheDirName": "testapp-updater",
  "url": "https://develar.s3.amazonaws.com/test/win/ia32",
}
`;

exports[`nsisWine > perUser file associations — build + install 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsisWine > perUser oneClick — build + install 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsisWine > string menuCategory — build + install 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "Test Menu Category ' CustomName 1.1.0.exe",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Menu Category ' CustomName 1.1.0.exe.blockmap",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsisWine > x64 oneClick — build 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup 1.1.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;
